# SynDock

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  FakeTarget.cmake  NSETypes.h  apptypes.h  config-syndock.h.cmake  infoview.cpp  infoview.h  latte-indicators.knsrc  lattecorona.cpp  lattecorona.h  lattedock.notifyrc  main.cpp  nsecoronainterface.cpp  nsecoronainterface.h  org.kde.latte-dock.appdata.xml.cmake  org.kde.latte-dock.desktop.cmake  primaryoutputwatcher.cpp  primaryoutputwatcher.h  screenpool.cpp  screenpool.h
app/data/: CMakeLists.txt  activitydata.cpp  activitydata.h  appletdata.cpp  appletdata.h  contextmenudata.h  errordata.cpp  errordata.h  errorinformationdata.cpp  errorinformationdata.h  genericbasictable.cpp  genericbasictable.h  genericdata.cpp  genericdata.h  generictable.cpp  generictable.h  layoutcolordata.cpp  layoutcolordata.h  layoutdata.cpp  layoutdata.h  layouticondata.cpp  layouticondata.h  layoutstable.cpp  layoutstable.h  preferencesdata.cpp  preferencesdata.h  screendata.cpp  screendata.h  uniqueidinfo.cpp  uniqueidinfo.h  viewdata.cpp  viewdata.h  viewstable.cpp  viewstable.h
app/dbus/: org.syndromatic.SynDock.xml
app/declarativeimports/: CMakeLists.txt  contextmenulayerquickitem.cpp  contextmenulayerquickitem.h  interfaces.cpp  interfaces.h
app/indicator/: CMakeLists.txt  factory.cpp  factory.h
app/layout/: CMakeLists.txt  abstractlayout.cpp  abstractlayout.h  centrallayout.cpp  centrallayout.h  genericlayout.cpp  genericlayout.h
app/layouts/: CMakeLists.txt  importer.cpp  importer.h  manager.cpp  manager.h  storage.cpp  storage.h  syncedlaunchers.cpp  syncedlaunchers.h  synchronizer.cpp  synchronizer.h
app/package/: CMakeLists.txt  lattepackage.cpp  lattepackage.h  syndockpackage.cpp  syndockpackage.h
app/packageplugins/indicator/: CMakeLists.txt  indicatorpackage.cpp  indicatorpackage.h  latte-indicator.desktop  latte-packagestructure-indicator.json
app/plasma/extended/: CMakeLists.txt  backgroundcache.cpp  backgroundcache.h  backgroundtracker.cpp  backgroundtracker.h  panelbackground.cpp  panelbackground.h  screengeometries.cpp  screengeometries.h  screenpool.cpp  screenpool.h  theme.cpp  theme.h
app/settings/: CMakeLists.txt  universalsettings.cpp  universalsettings.h
app/settings/actionsdialog/: CMakeLists.txt  actionlistwidgetitem.cpp  actionlistwidgetitem.h  actionsdialog.cpp  actionsdialog.h  actionshandler.cpp  actionshandler.h
app/settings/detailsdialog/: CMakeLists.txt  colorsmodel.cpp  colorsmodel.h  detailsdialog.cpp  detailsdialog.h  detailshandler.cpp  detailshandler.h  patternwidget.cpp  patternwidget.h  schemescombobox.cpp  schemescombobox.h  schemesmodel.cpp  schemesmodel.h
app/settings/exporttemplatedialog/: CMakeLists.txt  appletsmodel.cpp  appletsmodel.h  exporttemplatedialog.cpp  exporttemplatedialog.h  exporttemplatehandler.cpp  exporttemplatehandler.h
app/settings/generic/: CMakeLists.txt  genericdialog.cpp  genericdialog.h  generichandler.cpp  generichandler.h  generictools.cpp  generictools.h  genericviewtools.cpp  genericviewtools.h  layoutscombobox.cpp  layoutscombobox.h  persistentmenu.cpp  persistentmenu.h
app/settings/screensdialog/: CMakeLists.txt  screensdialog.cpp  screensdialog.h  screenshandler.cpp  screenshandler.h  screensmodel.cpp  screensmodel.h
app/settings/settingsdialog/: CMakeLists.txt  layoutscontroller.cpp  layoutscontroller.h  layoutsheaderview.cpp  layoutsheaderview.h  layoutsmodel.cpp  layoutsmodel.h  layoutstableview.cpp  layoutstableview.h  settingsdialog.cpp  settingsdialog.h  tablayoutshandler.cpp  tablayoutshandler.h  tabpreferenceshandler.cpp  tabpreferenceshandler.h  templateskeeper.cpp  templateskeeper.h
app/settings/viewsdialog/: CMakeLists.txt  viewscontroller.cpp  viewscontroller.h  viewsdialog.cpp  viewsdialog.h  viewshandler.cpp  viewshandler.h  viewsmodel.cpp  viewsmodel.h  viewstableview.cpp  viewstableview.h
app/shortcuts/: CMakeLists.txt  globalshortcuts.cpp  globalshortcuts.h  modifiertracker.cpp  modifiertracker.h  shortcutstracker.cpp  shortcutstracker.h
app/templates/: CMakeLists.txt  templatesmanager.cpp  templatesmanager.h
app/tools/: CMakeLists.txt  commontools.cpp  commontools.h
app/view/: CMakeLists.txt  clonedview.cpp  clonedview.h  containmentinterface.cpp  containmentinterface.h  effects.cpp  effects.h  eventssink.cpp  eventssink.h  nseparaboliceffect.cpp  nseparaboliceffect.h  originalview.cpp  originalview.h  parabolic.cpp  parabolic.h  positioner.cpp  positioner.h  tasksmodel.cpp  tasksmodel.h  view.cpp  view.h  visibilitymanager.cpp  visibilitymanager.h
app/view/helpers/: CMakeLists.txt  floatinggapwindow.cpp  floatinggapwindow.h  screenedgeghostwindow.h  (+3 more)
app/wm/: CMakeLists.txt  abstractwindowinterface.cpp  abstractwindowinterface.h  nsewaylandinterface.cpp  nsewaylandinterface.h  schemecolors.cpp  schemecolors.h  tasktools.cpp  tasktools.h  waylandinterface.cpp  waylandinterface.h  windowinfowrap.cpp  windowinfowrap.h
containment/: CMakeLists.txt
containment/package/: metadata.json
containment/plugin/: layoutmanager.cpp  qmldir  syndockcontainmentplugin.cpp  syndockcontainmentplugin.h
containmentactions/contextmenu/: CMakeLists.txt  layoutmenuitemwidget.cpp  menu.cpp  plasma-containmentactions-lattecontextmenu.json
declarativeimports/: CMakeLists.txt
declarativeimports/components/: AddItem.qml  AddingArea.qml  BadgeText.qml  CheckBoxesColumn.qml  ComboBox.qml  ComboBoxButton.qml  ExternalShadow.qml  GlowPoint.qml  Header.qml  HeaderSwitch.qml  IndicatorItem.qml  ItemDelegate.qml  Label.qml  ScrollArea.qml  Slider.qml  SpinBox.qml  SpriteRectangle.qml  SubHeader.qml  Switch.qml  TextField.qml  ToolTip.qml  qmldir
declarativeimports/core/: CMakeLists.txt  qmldir  syndockcoreplugin.cpp  syndockcoreplugin.h
indicators/: CMakeLists.txt
indicators/default/: metadata.json
indicators/org.kde.latte.plasma/: metadata.json
indicators/org.kde.latte.plasmatabstyle/: metadata.json
plasmoid/: CMakeLists.txt
plasmoid/package/: metadata.json
plasmoid/plugin/: qmldir  syndocktasksplugin.cpp  syndocktasksplugin.h
(+308 files in other folders)
