# SynDock Indicators
# Copyright (C) 2026 Syndromatic Ltd.

# Install indicator themes to syndock data directory
install(DIRECTORY default DESTINATION ${KDE_INSTALL_DATADIR}/syndock/indicators)
install(DIRECTORY org.kde.latte.plasma DESTINATION ${KDE_INSTALL_DATADIR}/syndock/indicators)
install(DIRECTORY org.kde.latte.plasmatabstyle DESTINATION ${KDE_INSTALL_DATADIR}/syndock/indicators)
